# ChangeLog for media-fonts/dejavu
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/dejavu/ChangeLog,v 1.149 2010/05/28 11:45:45 pva Exp $

*dejavu-2.31 (28 May 2010)

  28 May 2010; Peter Volkov <pva@gentoo.org> +dejavu-2.31.ebuild:
  Version bump.

  20 May 2010; Peter Volkov <pva@gentoo.org> dejavu-2.30.ebuild:
  amd64 stable, bug 318553.

  20 May 2010; Jeroen Roovers <jer@gentoo.org> dejavu-2.30.ebuild:
  Stable for HPPA PPC (bug #318553).

  19 May 2010; Raúl Porcel <armin76@gentoo.org> dejavu-2.30.ebuild:
  alpha/arm/ia64/s390/sh/sparc/x86 stable wrt #318553

  11 May 2010; Brent Baude <ranger@gentoo.org> dejavu-2.30.ebuild:
  stable ppc64, bug 318553

  01 Jan 2010; Christian Faulhammer <fauli@gentoo.org> dejavu-2.30.ebuild:
  Transfer Prefix keywords

  11 Oct 2009; Peter Volkov <pva@gentoo.org> dejavu-2.30.ebuild:
  ~mips keyworded, bug #261825

  12 Sep 2009; Raúl Porcel <armin76@gentoo.org> dejavu-2.29.ebuild:
  arm/ia64/s390/sh/sparc/x86 stable wrt #283193

  06 Sep 2009; Brent Baude <ranger@gentoo.org> dejavu-2.29.ebuild:
  Marking dejavu-2.29 ppc64 for bug 283193

  06 Sep 2009; Jeremy Olexa <darkside@gentoo.org> dejavu-2.29.ebuild:
  amd64 stable, bug 283193. Compile tested only

  30 Aug 2009; Tobias Klausmann <klausman@gentoo.org> dejavu-2.29.ebuild:
  Stable on alpha, bug #283193

  30 Aug 2009; nixnut <nixnut@gentoo.org> dejavu-2.29.ebuild:
  ppc stable #283193

  30 Aug 2009; Jeroen Roovers <jer@gentoo.org> dejavu-2.29.ebuild:
  Stable for HPPA (bug #283193).

*dejavu-2.30 (30 Aug 2009)

  30 Aug 2009; Ryan Hill <dirtyepic@gentoo.org> -dejavu-2.27.ebuild,
  +dejavu-2.30.ebuild:
  Version bump, remove old (bug #283109 by Christopher Culver).

  15 Mar 2009; Raúl Porcel <armin76@gentoo.org> dejavu-2.28-r1.ebuild:
  arm/ia64/s390/sh stable wrt #261824

  14 Mar 2009; nixnut <nixnut@gentoo.org> dejavu-2.28-r1.ebuild:
  ppc stable #261824
