@@ -1,6 +1,10 @@
 # ChangeLog for media-fonts/dejavu
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/dejavu/ChangeLog,v 1.149 2010/05/28 11:45:45 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/dejavu/ChangeLog,v 1.150 2010/06/07 10:03:22 spatz Exp $
+
+  07 Jun 2010; Dror Levin <spatz@gentoo.org> -dejavu-2.21.ebuild,
+  -dejavu-2.28-r1.ebuild, -dejavu-2.29.ebuild, dejavu-2.31.ebuild:
+  Remove outdated warning about firefox 2, bug 321923. Drop old.
 
 *dejavu-2.31 (28 May 2010)
 
